// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.securecomputation.controlplane.v1alpha;

import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "google/protobuf/timestamp.proto";

option java_package = "org.wfanet.measurement.securecomputation.controlplane.v1alpha";
option java_multiple_files = true;
option java_outer_classname = "WorkItemAttemptProto";

// Resource representing a work item attempt.
message WorkItemAttempt {
  option (google.api.resource) = {
    type: "control-plane.secure-computation.halo-cmm.org/WorkItemAttempt"
    pattern: "workItems/{work_item}/workItemAttempts/{work_item_attempt}"
    singular: "workItemAttempt"
    plural: "workItemAttempts"
  };

  // Resource name.
  string name = 1 [(google.api.field_behavior) = IDENTIFIER];

  // State of a `WorkItemAttempt`.
  enum State {
    // Default value if state is omitted.
    STATE_UNSPECIFIED = 0;

    // The `WorkItem` has been delivered to the subscriber.
    CLAIMED = 1;

    // The `WorkItem` has been successfully processed.
    SUCCEEDED = 2;

    // The subscriber failed to process the `WorkItem`.
    FAILED = 3;

  }

  // State of this `WorkItemAttempt`.
  State state = 2 [(google.api.field_behavior) = OUTPUT_ONLY];

  // The attempt number for processing this `WorkItem`.
  int32 attempt_number = 3 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Optional. Log messages recorded by the subscriber for this `WorkItemAttempt`.
  string logs = 4 [(google.api.field_behavior) = OUTPUT_ONLY];

  google.protobuf.Timestamp create_time = 5 [(google.api.field_behavior) = OUTPUT_ONLY];
  google.protobuf.Timestamp update_time = 6 [(google.api.field_behavior) = OUTPUT_ONLY];

}
